doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Bluej\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files (x86)\Bluej\lib\bluejcore.jar;C:\Program Files (x86)\Bluej\lib\junit-4.11.jar;C:\Program Files (x86)\Bluej\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\Bluej\lib\lang-stride.jar;C:\Program Files (x86)\Bluej\lib\javafx\lib\javafx.base.jar;C:\Program Files (x86)\Bluej\lib\javafx\lib\javafx.controls.jar;C:\Program Files (x86)\Bluej\lib\javafx\lib\javafx.fxml.jar;C:\Program Files (x86)\Bluej\lib\javafx\lib\javafx.graphics.jar;C:\Program Files (x86)\Bluej\lib\javafx\lib\javafx.media.jar;C:\Program Files (x86)\Bluej\lib\javafx\lib\javafx.properties.jar;C:\Program Files (x86)\Bluej\lib\javafx\lib\javafx.swing.jar;C:\Program Files (x86)\Bluej\lib\javafx\lib\javafx.web.jar;D:\Java Class\jfood
-d
D:\Java Class\jfood\doc
-encoding
UTF-8
-charset
UTF-8
D:\Java Class\jfood\Customer.java
<---- end of javadoc command ---->
Loading source file D:\Java Class\jfood\Customer.java...
Constructing Javadoc information...
D:\Java Class\jfood\Customer.java:19: error: cannot find symbol
    public Customer(int id, String name, String email, String password, Calender joinDate)
                                                                        ^
  symbol:   class Calender
  location: class Customer
1 error
